2008-04-22 Maxim
- FIX:/UI/WebVision: Filling mechanisms in primitive ElFigure are fixed.


2008-04-22 Roman
- !!!!:/SYS/: Global dynamic nodes copy mechanism is added.
- !!!!:/UI/QTCfg: Global dynamic nodes copy mechanism support is added.
- !!!!:/DB: Remove individual copy mechanism and use new dynamic nodes copy mechanism.
- !!!!:/DAQ/BlockCalc: Remove individual copy mechanism and use new dynamic nodes copy mechanism.
- !!!!:/UI/VCAEngine: Remove individual copy mechanism and use new dynamic nodes copy mechanism.
- /UI/Vision: Use global copy icons.
- /UI/QTCfg: Check for already present node warning is added to functions itAdd and itPaste.
- /UI/QTCfg: Context menu is disabled for virtual containers.
- FIX:/UI/Vision, /UI/WebVision: Fixed values request round made flow to height for primitive "Diagram".


2008-04-16 Maxim
- /UI/Vision: Coordinates' printing while moving a point of the primitive ElFigure in status bar is added.
- /UI/Vision: Deleting of all chosen primitives ElFigure by pressing "Del" support is added.
- FIX:/UI/Vision: cursor set/unset is fixed.
- /UI/WebVision: In function "colorParse" now "-1" instead "0" is returned if no color is found.  
- /UI/WebVision: Blocking of the painting of primitives ElFigure which point(s) are abroad the borders of the image or Fills, consist of such primitives support is added.
- /UI/Vision: Deleting the primitive ElFigure by doubleclicking the left button of the mouse on it removed. 
- !!!/UI/WebVision: Fill support for primitive ElFigure is added.
- FIX:/UI/Vision: Fill parsing is fixed.


2008-04-16 Roman
- !!!:/SYS: Groups of branches control mechanism is changed to direct modification control.
- /SYS: Translation to Russian and Ukranian is updated.
- !!!:/DAQ/CIF: Data acquisition of Siemens PLC through ISO_TSAP protocol by library Libnodave is added. The library Libnodave full included to module CIF. 
    It allow to make support other acquisition methods in future. The module is renamed to "siemens".